--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="proffile dhoni-modified.png"  alt="shubham bhosle's profile"></td>
+        <td><img src="mypic.png"  alt="shubham bhosle's profile" width="250" ></td>
         <td><h1>Shubham Bhosle</h1>
           <p> Student At <em><strong><a href="http://www.walchandsangli.ac.in/"> Walchand College Of Engineering</a></strong></em>.</p>
           <p> I am buzzing coder with a great problem solving abilty . And currently , I am learning web development! </p></td>
